--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -145,12 +145,12 @@ social_icons:
 
 # Blog rolls
 links_icon: link
-links_title: Links
-links_layout: block
-#links_layout: inline
-#links:
-  #Title: http://example.com/
-
+links_title: 友情链接
+#links_layout: block
+links_layout: inline
+links:
+  六脉神间: https://blog.diosfun.com/
+  My CSDN: https://blog.csdn.net/chenxyt
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
 # in site  directory(source/uploads): /uploads/avatar.gif
